Add a "Featured" list
Grid layout - row preferred
Only show if on the first page of a paginatation
and if allowed by the site configuration.

--- a/exampleSite/content/posts/this-blog/index.adoc
+++ b/exampleSite/content/posts/this-blog/index.adoc
@@ -4,6 +4,7 @@ date = "2024-08-20"
 categories = ["Web"]
 tags = ["AsciiDoc"]
 feature = "blogging.jpg"
+featured = true
 +++
 :toc:
 :toc-placement: preamble
