Converting into a Hugo module and rebranding
Fix possibly empty custom_highlight.css
Rebranding into hugo-madb - modern AsciiDoc blogging theme.
Attempts to force fa css to bundle
Adjusting some CSS variables
Equally support "topics" and "tags" taxonomies in post-meta
Fix taxonomy filtering pages
Support reading time in post meta
Implements social sharing.
Integrate giscuss
Fixes the card content not fitting
Adds a body-scripts partial for sites to overload
With stuff that needs to exist in body, instead of in head,
such as Firebase scripts.

--- a/exampleSite/content/posts/this-blog/index.adoc
+++ b/exampleSite/content/posts/this-blog/index.adoc
@@ -4,6 +4,7 @@ date = "2024-08-20"
 categories = ["Web"]
 tags = ["AsciiDoc"]
 feature = "blogging.jpg"
+summary = "This is a cool post about how I wrote this blog"
 +++
 :toc:
 :toc-placement: preamble
@@ -15,8 +16,6 @@ Asciidoc cheatsheet for GitHub
 ==============================
 // Need some preamble to get TOC:
 {empty}
-
-image::blogging.jpg[]
 
 == GitHub limitations
 
