--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -15,7 +15,14 @@
   translation: "Posted on {{ . }}"
 - id: taggedWith
   translation: "Tagged with"
-
+- id: about
+  translation: "About"
+- id: readingTime
+  translation:
+    one: '{{ .Count }} minute reading'
+    other: '{{ .Count }} minutes reading'
+- id: sharePost
+  translation: "Share this post via"
 
 # 404 page
 - id: pageNotFoundLink
@@ -26,4 +33,4 @@
 
 # Footer
 - id: poweredBy
-  translation: 'This page was built with <a href="https://gohugo.io/">Hugo {{ . }}</a> using the <a href="https://github.com/basil/antora-default-ui-hugo-theme">Hugo port</a> of the <a href="https://gitlab.com/antora/antora-ui-default">Antora default UI</a>. The source code for this UI is licensed under the terms of the <a href="https://www.mozilla.org/en-US/MPL/2.0/">Mozilla Public License, Version 2.0</a> (MPL-2.0).'
+  translation: 'This page was built with <a href="https://gohugo.io/">Hugo {{ . }}</a> using the <a href="https://github.com/olivecdev/hugo-madb">Hugo modern AsciiDoc blogging</a> theme. The source code for this UI is licensed under the terms of the <a href="https://www.mozilla.org/en-US/MPL/2.0/">Mozilla Public License, Version 2.0</a> (MPL-2.0).'
